# goopies_bevy

./: Cargo.toml
src/: asset_loader.rs  camera.rs  collider.rs  food.rs  goopie.rs  main.rs  moving_object.rs
