[package]
name = "goopies_bevy"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = "0.16.1"
bevy_rapier2d = {version="0.30.0", features = ["debug-render-2d", "parallel", "serde-serialize"]}
log = { version = "*", features = ["max_level_debug", "release_max_level_warn"] }
rand = "0.9.1"

# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3
